Fixed hero image visibility in mobile devices

--- a/src/pages/Framework/style.css
+++ b/src/pages/Framework/style.css
@@ -554,6 +554,10 @@
 }
 
 @media (max-width: 768px) {
+  .heroMainImage {
+    display: none;
+  }
+
   .patternSectionWrapper{
     background: none;
   }
